<resources>
    <string name="app_name">Flourish</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="support">Support</string>
    <string name="money">Money</string>
    <string name="add">Add</string>
    <string name="expenses">Expense</string>
    <string name="mileage">Mileage</string>
    <string name="vehicle">Vehicle</string>
    <string name="reason">Reason</string>
    <string name="total_miles">Total Miles</string>
    <string name="income">Income</string>
    <string name="payments">Payments</string>
    <string name="deliveries">Deliveries</string>
    <string name="account">Account</string>
    <string name="account_name">Account Name</string>
    <string name="type">Type :</string>
    <string name="reference">Reference</string>
    <string name="amount">Amount</string>
    <string name="zipCode">Zip</string>
    <string name="description">Description</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_number">Invoice #:</string>
    <string name="already_have_account">Already have account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="company">Company</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="create_user">Create Account</string>
    <string name="contacts">Contacts</string>
    <string name="sales">Sales</string>
    <string name="inventory">Inventory</string>
    <string name="settings">Settings</string>
    <string name="add_contact">Add</string>
    <string name="logout">Sign Out</string>
    <string name="register">Create my new account!</string>
    <string name="get_an_account">Sign Up</string>
    <string name="searchname">Search</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="checkbox">I agree to the Terms of Service.</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="new_contact">New Contact</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="view_invoices">View Invoices</string>
    <string name="revenue">Revenue</string>
    <string name="outstanding">Outstanding</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete">Delete</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="address">Address</string>
    <string name="street1">Street</string>
    <string name="street2">Street 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="country">Country</string>
    <string name="birth_date_text">Birth Date</string>
    <string name="birth_date">--/--/----</string>
    <string name="hand_lotion">Hand Lotion</string>
       <string name="delivered_items"> Delivered items</string>
    <string name="on_hand_value">On Hand Value</string>
    <string name="on_hand_quantity">On Hand Quantity</string>
    <string name="number">Number:</string>
    <string name="wholesale">Wholesale:</string>
    <string name="retail:">Retail:</string>
    <string name="target">Target:</string>
    <string name="lot_size">Lot Size:</string>
    <string name="customer">Customer</string>
    <string name="date">Date :</string>
    <string name="date_string">Date</string>
    <string name="booking">Booking</string>
    <string name="invoice_type">Invoice Type</string>
    <string name="help_desk">Helpdesk</string>
    <string name="total">Total</string>
    <string name="sales_total">Total :</string>
    <string name="subtotal">Sub-Total :</string>
    <string name="sales_tax">Sales Tax</string>
    <string name="cancel">Cancel</string>
    <string name="invoice_discount">Total Invoice Discount</string>
    <string name="sales_invoice_discount">Invoice Discount :</string>
    <string name="tax_after_discount">Tax after discount</string>
    <string name="shipping">Shipping</string>
    <string name="sales_shipping">Shipping :</string>
    <string name="sales_type">Sales Type</string>
    <string name="retail">Retail</string>
    <string name="quantity">Quantity</string>
    <string name="discount">Discount</string>
    <string name="tax_shipping">Tax shipping</string>
    <string name="tax">Tax:</string>
    <string name="favourites">Favourites</string>
    <string name="from_phone">From Phone Contacts</string>
    <string name="manually">Manually</string>
    <string name="mark_items_delivered">Mark items delivered</string>
    <string name="add_line_item">Add line item</string>
    <string name="alert_dialog_create_user_success">User successfully created</string>
    <string name="alert_dialog_username_not_available">Username not available</string>
    <string name="alert_dialog_invalid_password">Minimum 6 letters must be given for password</string>
    <string name="alert_dialog_login_success">Login success.</string>
    <string name="enter_your_credentials">Please enter your credentials.</string>
    <string name="enter_your_details">Please enter your details.</string>
    <string name="enter_your_username">Please enter your username.</string>
    <string name="enter_your_password">Please enter your password.</string>
    <string name="confirm_your_password">Please confirm your password.</string>
    <string name="enter_your_valid_username">Please enter your valid username.</string>
    <string name="enter_your_valid_password">Please enter your valid password.</string>
    <string name="enter_your_first_name">Please enter your first name.</string>
    <string name="enter_your_last_name">Please enter your last name.</string>
    <string name="enter_your_birth_date">Please enter your birth date.</string>
    <string name="enter_your_email">Please enter your email.</string>
    <string name="enter_your_valid_email">Please enter your valid email.</string>
    <string name="enter_your_company">Please enter your company.</string>
    <string name="accept_terms_conditions">Please accept terms and conditions.</string>
    <string name="enter_your_password_details">Password doesnot match</string>
    <string name="alert_dialog_password_doesnot_match">Passwords does not match.</string>
    <string name="login_key_not_valid">LoginKey Not Valid</string>
    <string name="please_login_again">Please Login Again</string>
    <string name="alert_dialog_session_timed_out">Session TimedOut</string>
    <string name="alert_dialog_logged_out_due_to_inactivity">You have been logged out due to inactivity. Please Sign In.</string>
    <string name="alert_dialog_invalid_email">Invalid Email</string>
    <string name="accept_terms_and_services">I agree to the Terms of Service</string>
    <string name="alert_dialog_user_login_failed">User login failed</string>
    <string name="alert_dialog_user_incorrect_password">Incorrect Password</string>
    <string name="alert_dialog_user_incorrect_login">Incorrect Login</string>
    <string name="alert_dialog_enter_the_details">Please enter the details</string>
    <string name="alert_dialog_no_network">Network is not available. Try again later.</string>
    <string name="alert_dialog_contact_not_updated">Unable to update the contact. Try again later.</string>
    <string name="alert_dialog_contact_not_deleted">Unable to delete the contact. Try again later.</string>
    <string name="alert_dialog_are_you_sure_logout">Are you sure want to logout?</string>
    <string name="alert_dialog_delete_success">Contact successfully deleted.</string>
    <string name="alert_dialog_delete_unsuccess">Cannot delete the contact. Try again later.</string>
    <string name="alert_dialog_update_success">Contact updated successfully.</string>
    <string name="alert_dialog_update_unsuccess">Cannot update the contact. Try again later.</string>
    <string name="alert_dialog_saved_success">Contact saved successfully.</string>
    <string name="alert_dialog_saved_unsuccess">Cannot save the contact. Try again later.</string>
    <string name="alert_dialog_create_invoice_success">Your invoice has been created successfully.</string>
    <string name="alert_dialog_create_invoice_unsuccess">Your invoice has not created. Try again later.</string>
    <string name="alert_dialog_update_invoice_success">Your invoice has been saved successfully.</string>
    <string name="alert_dialog_delete_invoice_success">Your invoice has been deleted successfully.</string>
    <string name="alert_dialog_update_invoice_unsuccess">Your invoice has not been saved. Try again later.</string>
    <string name="alert_dialog_enter_proper_date">Selected date must not exceed current date.</string>
    <string name="alert_dialog_delete_invoice">Are you sure you want to delete this invoice.</string>
    <string name="alert_dialog_quit_application_and_logout">Logging out from the application will end your session.</string>
    <string name="alert_dialog_are_you_sure">Are you sure?</string>
    <string name="alert_dialog_are_you_sure_for_quit_application">Are you sure you want to exit?</string>
    <string name="alert_dialog_are_you_sure_for_delete_this_contact">Are you sure you want to delete this contact?</string>
    <string name="alert_dialog_are_you_sure_for_delete_this_expense">Are you sure you want to delete this expense?</string>
    <string name="alert_dialog_are_you_sure_for_delete_this_income">Are you sure you want to delete this income?</string>
    <string name="alert_dialog_vehicle_trip_not_found">Vehicle Trip not found. Try again later.</string>
    <string name="alert_dialog_mileage_update_success">Mileage Updated Successfully.</string>
    <string name="alert_dialog_vehicle_not_found">Vehicle not found. Try again later.</string>
    <string name="alert_dialog_account_not_found">Account not found. Try again later.</string>
    <string name="alert_dialog_expenses_details_delete">You have deleted Successfully</string>
    <string name="alert_dialog_income_update_success">Income Updated Successfully.</string>
    <string name="alert_dialog_expenses_update_success">Expense Updated Successfully.</string>
    <string name="alert_dialog_mileage_added_success">Mileage added Successfully.</string>
    <string name="alert_dialog_income_added_success">Income Added Successfully.</string>
    <string name="alert_dialog_invoice_create_failed">Invoice has not saved.</string>
    <string name="alert_dialog_expenses_added_success">Expense Added Successfully.</string>
    <string name="alert_dialog_enter_mileage_details_to_be_added">Enter Mileage Details To Add.</string>
    <string name="alert_dialog_enter_expenses_details_to_be_added">Enter Expenses Details To Add.</string>
    <string name="alert_dialog_enter_income_details_to_be_added">Enter Income Details To Add.</string>
    <string name="alert_dialog_income_not_deleted">Unable to delete the income. Try again later.</string>
    <string name="alert_dialog_income_delete_success">Income successfully deleted.</string>
    <string name="alert_dialog_expense_not_deleted">Unable to delete the expense. Try again later.</string>
    <string name="alert_dialog_expense_delete_success">Expense successfully deleted.</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="take_receipt_photo">Take Receipt Photo</string>
    <string name="picture">picture</string>
</resources>