<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" >

            <Button
                android:id="@+id/contacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts" />

            <Button
                android:id="@+id/sales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/contacts"
                android:text="@string/sales" />

            <Button
                android:id="@+id/inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sales"
                android:text="@string/inventory" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>