<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg" >

    <RelativeLayout
        android:id="@+id/create_user_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar" >

        <Button
            android:id="@+id/create_user_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@drawable/topbar_selector"
            android:text="@string/cancel"
            android:paddingBottom="3dp"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/create_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_user"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_user_top_bar"
        android:layout_margin="5dp" >

        <RelativeLayout
            android:id="@+id/layout_scroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp" >

            <RelativeLayout
                android:id="@+id/first_name_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            
                android:layout_marginLeft="10dp" >

                <EditText
                    android:id="@+id/first_name_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login1"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/last_name_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name_rl"
                android:layout_marginLeft="10dp" >

                <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login2"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/create_user_username_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_rl"
                android:layout_marginLeft="10dp"
                >

                <EditText
                    android:id="@+id/create_user_username_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login2"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/create_user_password_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_user_username_rl"
                android:layout_marginLeft="10dp" >

                <EditText
                    android:id="@+id/create_user_password_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login2"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/create_user_confirm_password_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_user_password_rl"
                android:layout_marginLeft="10dp" >

                <EditText
                    android:id="@+id/create_user_confirm_password_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login2"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/email_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/create_user_confirm_password_rl"
                android:layout_marginLeft="10dp" >

                <EditText
                    android:id="@+id/email_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login2"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/company_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_rl"
                android:layout_marginLeft="10dp" >

                <EditText
                    android:id="@+id/company_et"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login3"
                    android:hint="@string/company"
                    android:inputType="text"
                    android:paddingLeft="5dp"
                    android:singleLine="true"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/checkbox_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/company_rl"
                android:layout_marginLeft="10dp" >

                <CheckBox
                    android:id="@+id/checkbox_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:checked="false"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/terms_service"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/checkbox_check"
                    android:paddingTop="15dp"
                    android:text="@string/accept_terms_and_services"
                    android:textStyle="bold" />
            </RelativeLayout>

            <Button
                android:id="@+id/create_user_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkbox_rl"
                android:layout_centerHorizontal="true"
                android:background="@drawable/sign_in"
                android:text="@string/register"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>