<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/add_expenses_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar" >

        <Button
            android:id="@+id/add_expenses_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_selector" />

        <TextView
            android:id="@+id/add_expenses_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/expenses"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/expenses_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/topbar_selector"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
         >
    
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/add_expenses_fields"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_expenses_top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp" >

        <RelativeLayout
            android:id="@+id/add_expenses_account_name_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login1" >

            <TextView
                android:id="@+id/add_expenses_account_name_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:hint="@string/account"
                android:singleLine="true"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/add_expenses_transaction_date_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_expenses_account_name_rl"
            android:background="@drawable/login2"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/add_expenses_transaction_date_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:editable="false"
                android:hint="@string/transaction_date"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="bold" />

            <Button
                android:id="@+id/add_expenses_calendar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@drawable/dateicon" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/add_expenses_description_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_expenses_transaction_date_rl"
            android:background="@drawable/login2" >

            <EditText
                android:id="@+id/add_expenses_description_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/description"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_expenses_reference_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_expenses_description_rl"
            android:background="@drawable/login2" >

            <EditText
                android:id="@+id/add_expenses_reference_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/reference"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_expenses_amount_rl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_expenses_reference_rl"
            android:background="@drawable/login3" >

            <EditText
                android:id="@+id/add_expenses_amount_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:background="@null"
                android:hint="@string/amount"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#000000"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

 

    <Button
        android:id="@+id/expense_capture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_expenses_amount_rl"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/expenses_capture_button"
        android:hint="@string/take_receipt_photo"
        android:textColor="#000000"
        android:visibility="visible"
        android:textSize="18dp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/expense_imageview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
             android:minHeight="100dip"
             android:scaleType="fitCenter"
      
      android:layout_gravity="center"
            
            android:background="@drawable/pic_border"
            android:contentDescription="@string/picture"
            android:visibility="gone" />

        <Button
            android:id="@+id/delete_expenses_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
        
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            
            android:background="@drawable/minus_selector"
            android:visibility="gone" 
            
            
            />
    </FrameLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>