<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#DADBDB" >

    <RelativeLayout
        android:id="@+id/logout_dialog_inner_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >

        <RelativeLayout
            android:id="@+id/title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/quit_dialog_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/flourish_logo_57" />

            <TextView
                android:id="@+id/alert_dialog_logout_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/quit_dialog_icon"
                android:text="@string/alert_dialog_are_you_sure_logout"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttons_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logout_dialog_inner_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp" >
        
          <Button
            android:id="@+id/logout_dialog_yes"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/alertbutton"
            android:text="@string/alert_dialog_yes"
            android:textColor="#FFFFFF"
            android:typeface="serif" />

        <Button
            android:id="@+id/logout_dialog_no"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/logout_dialog_yes"
            android:layout_marginTop="5dp"
            android:background="@drawable/alertbutton"
            android:text="@string/alert_dialog_no"
            android:textColor="#FFFFFF"
            android:typeface="serif" />
    </RelativeLayout>

</RelativeLayout>